@@ -1,0 +1,9 @@
+﻿nil subclass: #Object
+!
+
+Object subclass: #Host nativeType: @AjTalk.Hosting.RemotingHostServer
+!
+
+host := Host new: 20000 with: 'Server2000'
+!
+
